--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,10 @@
     <title>About Page</title>
 </head>
 <body>
-   
+    <div class="banner-class ">
+        <img src="/img/main-img.jpg" class="banner-img" />
+        >  
+    </div>
     
 
 
