--- a/about-us.html
+++ b/about-us.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="banner-class ">
-        <img src="/img/main-img.jpg" class="banner-img" />
-        >  
+        <img src="/img/main-img.jpg" class="banner-gimg" />
+        <h1 class="banner-text "> About us</h1>  
     </div>
     
 
