--- a/about-us.html
+++ b/about-us.html
@@ -14,6 +14,12 @@
         <img src="/img/main-img.jpg" class="banner-gimg" />
         <h1 class="banner-text "> About us</h1>  
     </div>
+
+    <div class="m-5 p-5">
+        <div class=" "> 
+            Unique & Frosty Delights! <br/>
+We Are An Awesome Agency.
+        </div>
     
 
 
