--- a/about-us.html
+++ b/about-us.html
@@ -14,9 +14,9 @@
         <img src="/img/main-img.jpg" class="banner-gimg" />
         <h1 class="banner-text "> About us</h1>  
     </div>
-
+    
     <div class="m-5 p-5">
-        <div class=" "> 
+        <div class="heading-font fs-1 fw-bolder "> 
             Unique & Frosty Delights! <br/>
 We Are An Awesome Agency.
         </div>
