--- a/about-us.html
+++ b/about-us.html
@@ -21,6 +21,11 @@
 We Are An Awesome Agency.
         </div>
     
+        <div class="pragraph-text mt-5 lh-lg"> 
+            <p> Indulge your senses in a world of frozen delights at Frosty Delights, where every scoop tells a story of creamy perfection and tantalizing flavors. Here, we craft ice cream that's not just a dessert but an experience, elevating the ordinary to extraordinary.
+             Delight in guilt-free indulgence with our selection of vegan and dairy-free options, including Coconut Bliss, Almond Delight, and Raspberry Sorbet. Everyone deserves a taste of happiness!</p>
+             For the daring palate, we offer flavors like Salted Caramel Swirl, Espresso Crunch, and Lavender Honey. Let your taste buds embark on an exciting journey with each spoonful. 
+           </div>
 
 
 
