explore more link added

--- a/about-us.html
+++ b/about-us.html
@@ -26,6 +26,9 @@ We Are An Awesome Agency.
              Delight in guilt-free indulgence with our selection of vegan and dairy-free options, including Coconut Bliss, Almond Delight, and Raspberry Sorbet. Everyone deserves a taste of happiness!</p>
              For the daring palate, we offer flavors like Salted Caramel Swirl, Espresso Crunch, and Lavender Honey. Let your taste buds embark on an exciting journey with each spoonful. 
            </div>
+           <div class="mt-4">
+            <a href="" style="color: #e83e8c;" > EXPLORE MORE </a>
+        </div>
 
 
 
