--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,12 @@ We Are An Awesome Agency.
            <div class="mt-4">
             <a href="" style="color: #e83e8c;" > EXPLORE MORE </a>
         </div>
-
+        
+        <div class="mt-4">
+            <video controls class="video p-3 m-5"> <source src="/icecream-video.mp4" type="video/mp4" />
+            </video>
+        </div>
+        
 
 
 
