--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -8,10 +8,11 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>About Page</title>
+    <link rel="stylesheet" href="/css/about_us.css"/>
 </head>
 <body>
     <div class="banner-class ">
-        <img src="/img/main-img.jpg" class="banner-gimg" />
+        <img src="/img/main-img.jp" class="banner-gimg" />
         <h1 class="banner-text "> About us</h1>  
     </div>
     
