banner width update

--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="banner-class ">
-        <img src="/imgs/main-img.jpg" class="banner-gimg" />
+        <img src="/imgs/main-img.jpg" class="banner-img" />
         <h1 class="banner-text "> About us</h1>  
     </div>
     
