add to cart toggel

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
                 <div class="left-flex">
                     <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
-                    <img src="./icons/add-contact.png" class="nav-icons"  alt="">
+                    <img src="./icons/add-contact.png" class="nav-icons"  alt="" >
                     <img src="./icons/heart.png" class="nav-icons"  alt="">
-                    <img src="./icons/shopping-bag.png" class="nav-icons"  alt="">
+                    <img src="./icons/shopping-bag.png" class="nav-icons"  alt="" onclick="openCart()">
                 </div>
             </div>
             <div id="myOverlay" class="overlay">
@@ -44,6 +44,12 @@
                   </form>
                 </div>
               </div>
+              <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <p class="cart">Shopping Cart</p>
+                <hr>
+              </div>
+              
             <div class="bg-img" id="bg-img">
                 <div  class="text-overlay">
                     <span class="heading">Style Destination</span>
