page name name and adding marquee tag for image sliding categories of icecream

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -12,93 +12,95 @@
   <header>
     <h1>Ice Cream Parlor</h1>
   </header>
- <div class="name-container">
-   <h2 class="page-heading">Products</h2>
-   <h6><a href="./../index.html">Home </a> ><a href="./menu_page.html">Products</a> </h6>
-   <div class="row">
-      <div class="col col-md-3">
-         <div>
+ <div class="name-container text-light ">
+   <h2 class="page-heading text-center "> Products</h2>
+   <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu_page.html"class="decoration text-white"> Products</a> </h6>
+   <marquee direction="right" behaviour="slide" scrolldelay="50">
+   <div class="d-flex flex-row mb-3" >
+      <div >
+         <div class="m-3 mx-4">
             <div>
                 <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
             </div>
-            <div>
+            <div class="m-3 mx-4">
                 Baber 
             </div>
          </div>
       </div>
-      <div class="col col-md-3">
+      <div  class="m-3 mx-4" >
         <div>
             <img src="./../imgs/menu-card/cosmetic-cat.webp" class="category-img" alt="">
         </div>
-        <div>
+        <div class="m-3 mx-4">
             Cosmetic 
         </div>
       </div>
-      <div class="col col-md-3">
+      <div class="m-3 mx-4" >
         <div>
             <img src="./../imgs/menu-card/electronics-cat.webp" class="category-img" alt="">
         </div>
-        <div>
+        <div class="m-3 mx-4">
             Electronics
         </div>
       </div>
-      <div class="col col-md-3">
+      <div  class="m-3 mx-4">
         <div>
             <img src="./../imgs/menu-card/fashion-cat.webp" class="category-img" alt="">
         </div>
-        <div>
+        <div class="m-3 mx-4">
             Fashion 
         </div>
       </div>
-      <div class="col col-md-3">
+      <div class="m-3 mx-4">
         <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
+            <img src="./../imgs/menu-card/food-cat.webp" class="category-img" alt="">
         </div>
-        <div>
-            Baber 
-        </div>
-      </div>
-      <div class="col col-md-3">
-        <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
-        </div>
-        <div>
-            Baber 
+        <div class="m-3 mx-4">
+            Food  
         </div>
       </div>
-      <div class="col col-md-3">
+      <div class="m-3 mx-4">
         <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
+            <img src="./../imgs/menu-card/furniture-cat.webp" class="category-img" alt="">
         </div>
-        <div>
-            Baber 
-        </div>
-      </div>
-      <div class="col col-md-3">
-        <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
-        </div>
-        <div>
-            Baber 
+        <div class="m-3 mx-4">
+            Furniture 
         </div>
       </div>
-      <div class="col col-md-3">
+      <div class="m-3 mx-4">
         <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
+            <img src="./../imgs/menu-card/jewerly-cat.webp" class="category-img" alt="">
         </div>
-        <div>
-            Baber 
+        <div class="m-3 mx-4">
+            Jewerly
         </div>
       </div>
-      <div class="col col-md-3">
+      <div class="m-3 mx-4">
         <div>
-            <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
+            <img src="./../imgs/menu-card/kid-cat.webp" class="category-img" alt="">
         </div>
+        <div class="m-3 mx-4">
+            Kid
+        </div>
+      </div>
+      <div class="m-3 mx-4" >
         <div>
-            Baber 
+            <img src="./../imgs/menu-card/life-style-cat.webp" class="category-img" alt="">
+        </div>
+        <div class="m-3 mx-4">
+            Life Style 
+        </div>
+      </div>
+      <div class="m-3 mx-4">
+        <div>
+            <img src="./../imgs/menu-card/medical-cat.webp" class="category-img" alt="">
+        </div>
+        <div class="m-3 mx-4">
+            Medical 
         </div>
       </div>
    </div>
+</marquee>
  </div>
   <footer>
     <p>&copy; 2024 Ice Cream Parlor</p>
