--- a/pages/services.html
+++ b/pages/services.html
@@ -17,22 +17,54 @@
         }
     </style>
 </head>
-
 <body>
-   <section>
-    <div class="container">
-        <h1 class="text-center mt-3 display-3 fw-bold">Our services</h1>
-        <hr>
-        <p class="text-center text-muted">we provide best services to our customers.</p>
+    <section>
+        <div class="container">
+            <h1 class="text-center mt-3 display-3 fw-bold">Our services</h1>
+            <hr>
+            <p class="text-center text-muted">we provide best services to our customers.</p>
+            <div class="row my-5">
+                <div class="col-12 col-sm-6 col-md-4 m-auto">
+                    <div class="card border-0 shadow text-center my-3">
+                        <div class="card-body">
+                           <img src="./../png/delivery.png" alt="icon" width="60px">
+                            <h3>Free Delivery</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
+                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
+                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                        </div>
+                    </div>
+                </div>
 
-    </div>
-   </section>
+                <div class="col-12 col-sm-6 col-md-4 m-auto">
+                    <div class="card border-0 shadow text-center my-3">
+                        <div class="card-body">
+                            <img src="./../png/healthy-food.png" alt="icon" width="60px">
+                            <h3>Fresh And Organic</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
+                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
+                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                        </div>
+                    </div>
+                </div>
 
-
+                <div class="col-12 col-sm-6 col-md-4 m-auto">
+                    <div class="card border-0 shadow text-center my-3">
+                        <div class="card-body">
+                            <img src="./../png/payment.png" alt="icon" width="60px">
+                            <h3>Easy Payments</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
+                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
+                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
