adding images of different flavour in menucard image folder  and adding some flavour images with description in menucard page.

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -102,8 +102,44 @@
    </div>
 </marquee>
  </div>
+
+<div class="row ">
+    <div class="col col-md-2 col-lg-4">
+        <div>
+           <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="flavour-description">
+            Cereal And Milk <br>
+            <p class="flavour-price">₹ 200.00 </p>
+        </div>
+    </div>
+
+    <div class="col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="flavour-description">
+            Choco Cherry
+            <br>
+            <p class="flavour-price">₹ 360.00 </p>
+        </div>
+    </div>
+
+    <div class="col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="flavour-description">
+            Chokobar
+            <br>
+            <p class="flavour-price">₹ 150.00 </p>
+        </div>
+    </div>
+
+</div>
+
   <footer>
-    <p>&copy; 2024 Ice Cream Parlor</p>
+    <p >&copy; 2024 Ice Cream Parlor</p>
   </footer>
   <script src="script.js"></script>
 </body>
