modified:   pages/services.html

--- a/pages/services.html
+++ b/pages/services.html
@@ -15,13 +15,18 @@
             padding: 0;
             font-family: "Space Grotesk", sans-serif;
         }
+        hr{
+            width: 200px;  
+            background: #108178;
+            height: 5px !important;
+        }
     </style>
 </head>
 <body>
     <section>
         <div class="container">
             <h1 class="text-center mt-3 display-3 fw-bold">Our services</h1>
-            <hr>
+            <hr class="mx-auto fs-bold">
             <p class="text-center text-muted">we provide best services to our customers.</p>
             <div class="row my-5">
                 <div class="col-12 col-sm-6 col-md-4 m-auto">
