--- a/pages/services.html
+++ b/pages/services.html
@@ -11,17 +11,23 @@
         @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
 
         * {
-            margin: 0;
-            padding: 0;
+            margin: 0px;
+            padding: 0px;
             font-family: "Space Grotesk", sans-serif;
         }
-        hr{
-            width: 200px;  
+
+        hr {
+            width: 200px;
             background: #108178;
             height: 5px !important;
         }
+        .card{
+            height: 300px;
+            width: 350px;
+        }
     </style>
 </head>
+
 <body>
     <section>
         <div class="container">
@@ -30,37 +36,37 @@
             <p class="text-center text-muted">we provide best services to our customers.</p>
             <div class="row my-5">
                 <div class="col-12 col-sm-6 col-md-4 m-auto">
-                    <div class="card border-0 shadow text-center my-3">
+                    <div class="card border-0 shadow text-center my-3 mx-2">
                         <div class="card-body">
-                           <img src="./../png/delivery.png" alt="icon" width="60px">
+                            <img src="./../png/delivery.png" alt="icon" width="60px">
                             <h3>Free Delivery</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
-                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
-                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                            <p>Enjoy the convenience of shopping from home with FREE DELIVERY on all orders! 🛍️ No
+                                minimum purchase required. Get your favorite items delivered straight to your doorstep
+                                without any extra charge. Don't miss out on this limited-time offer!</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4 m-auto">
-                    <div class="card border-0 shadow text-center my-3">
+                    <div class="card border-0 shadow text-center my-3 mx-2">
                         <div class="card-body">
                             <img src="./../png/healthy-food.png" alt="icon" width="60px">
                             <h3>Fresh And Organic</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
-                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
-                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                            <p>Treat yourself to a guilt-free delight with our delicious range of Fresh and Organic Ice
+                                Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
+                                with flavor and goodness.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4 m-auto">
-                    <div class="card border-0 shadow text-center my-3">
+                    <div class="card border-0 shadow text-center my-3 mx-2">
                         <div class="card-body">
                             <img src="./../png/payment.png" alt="icon" width="60px">
                             <h3>Easy Payments</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non deleniti
-                                consequuntur, mollitia voluptatum, tempora voluptatem est ad dolore obcaecati
-                                exercitationem veniam quam eveniet a error impedit harum sed architecto?</p>
+                            <p>Indulge in our scrumptious Easy Payments Ice Cream and satisfy your sweet cravings
+                                without any hassle! With our convenient payment options, treating yourself to creamy
+                                goodness has never been easier.</p>
                         </div>
                     </div>
                 </div>
