search , wishlist, filter ,cart icons added in menucard icon folder.

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -118,6 +118,11 @@
         <div>
             <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
         </div>
+        <div class="effect-hover">
+            <img src="./../icons/menupage-icons/addToCart.jpg" height="20px">
+            <img src="./../icons/menupage-icons/search-icon.jpg" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist-icon.jpg" height="20px" alt="">
+        </div>
         <div class="flavour-description">
             Choco Cherry
             <br>
