filter container added in menu page .

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -102,11 +102,18 @@
    </div>
 </marquee>
  </div>
-
+  <div class="filter-container">
+    <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
+  </div>
 <div class="row ">
-    <div class="col col-md-2 col-lg-4">
+    <div class=" flavour-card col col-md-2 col-lg-4">
         <div>
            <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+            <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
         <div class="flavour-description">
             Cereal And Milk <br>
@@ -114,14 +121,14 @@
         </div>
     </div>
 
-    <div class="col col-md-2 col-lg-4">
+    <div class="flavour-card col col-md-2 col-lg-4">
         <div>
             <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
         </div>
         <div class="effect-hover">
-            <img src="./../icons/menupage-icons/addToCart.jpg" height="20px">
-            <img src="./../icons/menupage-icons/search-icon.jpg" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist-icon.jpg" height="20px" alt="">
+            <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
         <div class="flavour-description">
             Choco Cherry
@@ -130,9 +137,14 @@
         </div>
     </div>
 
-    <div class="col col-md-2 col-lg-4">
+    <div class=" flavour-card col col-md-2 col-lg-4">
         <div>
             <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+            <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
         <div class="flavour-description">
             Chokobar
