new divison added

--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -36,6 +36,11 @@ We Are An Awesome Agency.
             </video>
         </div>
 
+        <div class="d-flex">
+            <div class="mx-4 ext-start" >
+                <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Story</h1>
+                <span style="color: #e83e8c;"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
+               <span class="pragraph-text"> Creamy Desert</span>
 
 
 
@@ -55,7 +60,6 @@ We Are An Awesome Agency.
 
 
 
-        
         
         <div>
             <div class="text-center m-5 p-2"> <h1 class="fs-1 fw-bolder heading-font ">
