one more division added

--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -51,6 +51,16 @@ We Are An Awesome Agency.
         </div>
     </div>
 
+    <div class="d-flex">
+
+        <div>
+            <img src="/img/our_vision.webp" class="paragraph-img mt-5 me-5 pt-5"/>
+        </div>
+        <div class="mx-4 ext-start" >
+            <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Vision</h1>
+            <span style="color: #e83e8c;"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
+           <span class="pragraph-text"> Creamy Desert</span>
+
 
 
 
