--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -60,6 +60,12 @@ We Are An Awesome Agency.
             <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Vision</h1>
             <span style="color: #e83e8c;"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
            <span class="pragraph-text"> Creamy Desert</span>
+           <p class="pragraph-text lh-lg fs-6 my-5">
+            We're a gathering spot for friends and families to create memories together. Whether you're celebrating a special occasion, treating yourself after a long day, or simply craving a scoop of happiness, our friendly staff is here to make your visit unforgettable.</p>
+            
+         <p class="pragraph-text lh-lg fs-6 my-5"> Explore our menu and discover a world of flavor possibilities Just for you. From our signature sundaes to customizable ice cream sandwiches, there's no limit to the delicious combinations you can create. </p>
+    </div>
+</div>
 
 
 
