--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -47,7 +47,7 @@ We Are An Awesome Agency.
              <p class="pragraph-text lh-lg fs-6 my-5">  At Creamy Desert, we believe that great ice cream starts with the finest ingredients and a dash of imagination. Each scoop is crafted with love and attention to detail, ensuring a creamy, decadent experience with every bite. </p>
         </div>
         <div>
-            <img src="/img/stawberry-icecream.png" class="paragraph-img m-5 pt-5"/>
+            <img src="/imgs/about-page-img/stawberry-icecream.png" class="paragraph-img m-5 pt-5"/>
         </div>
     </div>
 
