--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -54,7 +54,7 @@ We Are An Awesome Agency.
     <div class="d-flex">
 
         <div>
-            <img src="/img/our_vision.webp" class="paragraph-img mt-5 me-5 pt-5"/>
+            <img src="/imgs/about-page-img/our_vision.webp" class="paragraph-img mt-5 me-5 pt-5"/>
         </div>
         <div class="mx-4 ext-start" >
             <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Vision</h1>
