--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="/css/about_us.css"/>
 </head>
 <body>
-   
+    
+    <div class="banner-class heading-font fw-bolder ">
+        <img src="/img/main-img.jpg" class="banner-img" />
+        <h1 class="banner-heading "> About us</h1>  
+        <div class="banner-text fs-4"> <a href="" class="banner-color"> Home</a> 
+            <span class="banner-color"> > </span>
+        <a href="" class="banner-color"> About Us</a></div>
+    </div>
     
     <div class="m-5 p-5">
         <div class="heading-font fs-1 fw-bolder "> 
