--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="/css/about_us.css"/>
 </head>
 <body>
-    
+
     <div class="banner-class heading-font fw-bolder ">
-        <img src="/img/main-img.jpg" class="banner-img" />
+        <img src="/imgs/about-page-img/main-img.jpg" class="banner-img" />
         <h1 class="banner-heading "> About us</h1>  
-        <div class="banner-text fs-4"> <a href="" class="banner-color"> Home</a> 
+        <div class="banner-text fs-4"> <a href="/index.html" class="banner-color"> Home</a> 
             <span class="banner-color"> > </span>
-        <a href="" class="banner-color"> About Us</a></div>
+        <a href="/Pages/about_us.html" class="banner-color"> About Us</a></div>
     </div>
     
     <div class="m-5 p-5">
