--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -11,12 +11,26 @@
 </head>
 
 <body>
-<header><h1>
-    Contact Us
-</h1></header>
-
-
-
+    <div class="header">
+        <div class="head">Contact Us </div>
+    </div>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1891.8577531523456!2d73.9694876!3d18.4965414!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e0!3m2!1sen!2sin!4v1712574417177!5m2!1sen!2sin"
+        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div class="contact-main">
+    <div class="contact"><p>If you would like to know more about our policies, <br>
+        you can consult our Terms and Conditions. You will also be able to<br>
+    follow your order (tracking number will be provided in an e-mail after ordering).</p></div>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
