--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -126,7 +126,7 @@
             <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
         </div>
         <div class="effect-hover">
-            <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <a href="./../pages/add_to_cart.html"><img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
             <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
             <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
