basic contact page created

--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -18,23 +18,46 @@
         src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1891.8577531523456!2d73.9694876!3d18.4965414!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e0!3m2!1sen!2sin!4v1712574417177!5m2!1sen!2sin"
         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-<div class="contact-main">
-    <div class="contact"><p>If you would like to know more about our policies, <br>
-        you can consult our Terms and Conditions. You will also be able to<br>
-    follow your order (tracking number will be provided in an e-mail after ordering).</p></div>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-</div>
+    <div class="contact-main">
+
+        <div class="contact">
+            <p style="font-size: 30px; font-weight:600; margin-left:10px">Connect With Us</p>
+            <p style="font-size: 18px; margin-left:10px; text-align:justify">If you would like to know more about our policies,
+                you can consult our Terms and Conditions. You will also be able to
+                follow your order (tracking number will be provided in an e-mail after ordering).</p><br>
+
+            <i class="fa-solid fa-phone-volume"></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Mobile</span> <br><a
+                href="tel:8805803087" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;+91 8805803087</a><br><br>
+            <i class="fa-solid fa-envelope"></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Email</span> <br><a
+                href="mailto: suraj@roadtocode.org" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;suraj@roadtocode.org</a><br><br>
+            <i class="fa-solid fa-location-dot"></i></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Location</span><br>
+            <a href="https://maps.app.goo.gl/Rmh5xuF63HXWgcGK7"
+                class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;404, Laxmi Heights, Above Lotus
+                Multi<br>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;speciality Hospital Manjari BK, pune - 412307
+            </a>
+
+
+        </div>
+
+        <div class="ms-4">
+            <form>
+                <p style="font-size: 30px; font-weight:600">Send Us An Message</p>
+                <label for="name"></label>
+                <input type="text" id="name" complete placeholder="Name" required class="name-customer">
+                <br><br>
+                <label for="EMAIL"></label>
+                <input type="email" id="EMAIL" required placeholder="Email" class="name-customer"><br><br>
+                <label for="mess"></label>
+                <input type="text" id="mess" complete placeholder="Message" required class="message-customer"><br><br>
+                <button class="button">Send</button><br><br>
+            </form>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/0dcf08ad5b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
