--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -105,7 +105,9 @@
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
-<div class="row ">
+
+  <div class="flavour-container">
+<div class="row  ">
     <div class=" flavour-card col col-md-2 col-lg-4">
         <div>
            <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
@@ -126,7 +128,7 @@
             <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
         </div>
         <div class="effect-hover">
-            <a href="./../pages/add_to_cart.html"><img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
             <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
             <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
@@ -153,8 +155,62 @@
         </div>
     </div>
 
-</div>
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            chocolate Wafer
+            <br>
+            <p class="flavour-price">₹ 320.00 </p>
+        </div>
+    </div>
 
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cookie.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cookie
+            <br>
+            <p class="flavour-price">₹ 480.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cookies-Cream.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cookies Cream
+            <br>
+            <p class="flavour-price">₹ 260.00 </p>
+        </div>
+    </div>
+
+</div>
+</div>
+<a href="./../pages/menu_page2nd.html" class="decoration text-center">
+    <div class="filter-container load-more-btn ">
+    Load More
+    </div>
+</a>
   <footer>
     <p >&copy; 2024 Ice Cream Parlor</p>
   </footer>
