--- a/Pages/menu_page2nd.html
+++ b/Pages/menu_page2nd.html
@@ -105,7 +105,9 @@
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
-<div class="row ">
+
+  <div class="flavour-container">
+<div class="row  ">
     <div class=" flavour-card col col-md-2 col-lg-4">
         <div>
            <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
@@ -126,7 +128,7 @@
             <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
         </div>
         <div class="effect-hover">
-            <a href="./../pages/add_to_cart.html"><img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
             <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
             <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
         </div>
@@ -153,8 +155,222 @@
         </div>
     </div>
 
-</div>
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            chocolate Wafer
+            <br>
+            <p class="flavour-price">₹ 320.00 </p>
+        </div>
+    </div>
 
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cookie.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cookie
+            <br>
+            <p class="flavour-price">₹ 480.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cookies-Cream.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cookies Cream
+            <br>
+            <p class="flavour-price">₹ 260.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cookies-Dough.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cookies Dough
+            <br>
+            <p class="flavour-price">₹ 450.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Cream-MilkShake.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Cream MilkShake
+            <br>
+            <p class="flavour-price">₹ 380.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Creamy Cake
+            <br>
+            <p class="flavour-price">₹ 460.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Ice-Cream-Cakes.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Ice Cream Cakes
+            <br>
+            <p class="flavour-price">₹ 220.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Lemon-Ice-Cream.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Lemon Ice Cream
+            <br>
+            <p class="flavour-price">₹ 180.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Pretzel-Cone.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Pretzel Cone
+            <br>
+            <p class="flavour-price">₹ 420.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Toasted-Strawberry.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Toasted Strawberry
+            <br>
+            <p class="flavour-price">₹ 400.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Vanilla.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Vanilla
+            <br>
+            <p class="flavour-price">₹ 270.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Wafer-Ice-Cream.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Wafer Ice Cream
+            <br>
+            <p class="flavour-price">₹ 180.00 </p>
+        </div>
+    </div>
+
+    <div class="flavour-card col col-md-2 col-lg-4">
+        <div>
+            <img src="./../imgs/menu-card/Waffle-Cones.jpg" class="flavour-img" alt="">
+        </div>
+        <div class="effect-hover">
+           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
+            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
+            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+        </div>
+        <div class="flavour-description">
+            Waffle Cones
+            <br>
+            <p class="flavour-price">₹ 500.00 </p>
+        </div>
+    </div>
+
+</div>
+</div>
+<a href="./../pages/menu_page2nd.html" class="decoration text-center">
+    <div class="filter-container load-more-btn ">
+    Show Less
+    </div>
+</a>
   <footer>
     <p >&copy; 2024 Ice Cream Parlor</p>
   </footer>
