--- a/Pages/menu_page2nd.html
+++ b/Pages/menu_page2nd.html
@@ -366,7 +366,7 @@
 
 </div>
 </div>
-<a href="./../pages/menu_page2nd.html" class="decoration text-center">
+<a href="./../pages/menu_page.html" class="decoration text-center">
     <div class="filter-container load-more-btn ">
     Show Less
     </div>
