--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
    
             
         </header>
-        <div><br>bbr
-        <br><br><b>rb
-            <br><br><br><br><br><br><br><br><br><br><b><br><br><b><br><br></b></b>
-        </b></div>
+      <div>
+        <img src="./imgs/s6.webp" alt="">
+      </div>
       
     </body>
 </html>
