--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -8,14 +8,17 @@
 <body>
     <h2>Product Details</h2>
   <div>
-    <strong>Name:</strong> <span id="product-name"></span>
+    <div>Name:</strong> <span id="product-name"></span>
+    </div>
   </div>
   <div>
-    <strong>Price:</strong> <span id="product-price"></span>
+    <div>Price:</strong> <span id="product-price"></span>
+    </div>
   </div>
   <div>
-    <strong>Description:</strong> <span id="product-description"></span>
+  <div>Description:</strong> <span id="product-description"></span>
   </div>
+</div>
 </div>
 </body>
 </html>
