--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -6,7 +6,7 @@
     <title>BUY-NOW</title>
 </head>
 <body>
-    <h2>Product Details</h2>
+    <h2>Product-Details</h2>
   <div>
     <div>Name:</strong> <span id="product-name"></span>
     </div>
