modified:   pages/services.html

--- a/pages/services.html
+++ b/pages/services.html
@@ -21,10 +21,7 @@
             background: #108178;
             height: 5px !important;
         }
-        .card{
-            height: 300px;
-            width: 350px;
-        }
+       
     </style>
 </head>
 
@@ -42,7 +39,7 @@
                             <h3>Free Delivery</h3>
                             <p>Enjoy the convenience of shopping from home with FREE DELIVERY on all orders! 🛍️ No
                                 minimum purchase required. Get your favorite items delivered straight to your doorstep
-                                without any extra charge. Don't miss out on this limited-time offer!</p>
+                                without any extra charge.</p>
                         </div>
                     </div>
                 </div>
