--- a/pages/services.html
+++ b/pages/services.html
@@ -27,6 +27,7 @@
         }
         .time{
             width: 400px;
+            background-color: rgba( 0, 0,0, .5);
             
         }
     </style>
@@ -39,14 +40,14 @@
             <hr class="mx-auto fs-bold">
             <p class="text-center text-muted">we provide best services to our customers.</p>
 
-            <div class="time p-2 d-block mx-auto">
-                <div class="bg-dark border-0 rounded-5 text-light d-flex justify-content-center align-item-center fs-1">
-                    <span id="hrs">00</span>
-                    <span>:</span>
-                    <span id="min">00</span>
-                    <span>:</span>
-                    <span id="sec">00</span>
-                    <span id="ampm"></span>
+            <div class="time p-2 d-block mx-auto border-0 rounded-5 shadow">
+                <div class="text-light d-flex justify-content-center align-item-center fs-1 p-1">
+                    <span  class="p-2" id="hrs">00</span>
+                    <span class="p-2" >:</span>
+                    <span class="p-2"  id="min">00</span>
+                    <span class="p-2" >:</span>
+                    <span class="p-2"  id="sec">00</span>
+                    <span class="p-2"  id="ampm"></span>
                 </div>
             </div>
 
