changed time background colour

--- a/pages/services.html
+++ b/pages/services.html
@@ -27,7 +27,7 @@
         }
         .time{
             width: 400px;
-            background-color: rgba( 0, 0,0, .5);
+            background-color: #fff;
             
         }
     </style>
@@ -41,7 +41,7 @@
             <p class="text-center text-muted">we provide best services to our customers.</p>
 
             <div class="time p-2 d-block mx-auto border-0 rounded-5 shadow">
-                <div class="text-light d-flex justify-content-center align-item-center fs-1 p-1">
+                <div class="text-danger d-flex justify-content-center align-item-center fs-1 p-1">
                     <span  class="p-2" id="hrs">00</span>
                     <span class="p-2" >:</span>
                     <span class="p-2"  id="min">00</span>
