modified:   pages/services.html

--- a/pages/services.html
+++ b/pages/services.html
@@ -40,7 +40,7 @@
             <hr class="mx-auto fs-bold">
             <p class="text-center text-muted">we provide best services to our customers.</p>
 
-            <div class="time p-2 d-block mx-auto border-0 rounded-5 shadow">
+            <div class="time m-4 p-1 d-block mx-auto border-0 rounded-5 shadow">
                 <div class="text-danger d-flex justify-content-center align-item-center fs-1 p-1">
                     <span  class="p-2" id="hrs">00</span>
                     <span class="p-2" >:</span>
@@ -49,6 +49,8 @@
                     <span class="p-2"  id="sec">00</span>
                     <span class="p-2"  id="ampm"></span>
                 </div>
+                <h2 class="text-center text-danger fs-bolder">OPENED</h2>
+                <p class="text-center text-muted">Open : 07:00 AM Close : 06:00 PM</p>
             </div>
 
             <div class="row my-5">
