--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -3,22 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BUY-NOW</title>
+    <title>Buy Now Form</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Product-Details</h2>
-  <div>
-    <div>Name:</strong> <span id="product-name"></span>
-    </div>
-  </div>
-  <div>
-    <div>Price:</strong> <span id="product-price"></span>
-    </div>
-  </div>
-  <div>
-  <div>Description:</strong> <span id="product-description"></span>
-  </div>
-</div>
-</div>
-</body>
-</html>
+  <form id="buyNowForm">
+    <label for="fullName">Full Name:</label>
+    <input type="text" id="fullName" name="fullName" required><br><br>
+
+  </body>
+  </html>  
