--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -11,5 +11,8 @@
     <label for="fullName">Full Name:</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
 
+    <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required><br><br>
+
   </body>
   </html>  
