--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -14,5 +14,8 @@
     <label for="email">Email:</label>
   <input type="email" id="email" name="email" required><br><br>
 
+  <input for="address">address:</lable>
+  <input type="text" id="fullName" name="fullName" required><br><br>
+
   </body>
   </html>  
