created form page

--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -17,5 +17,9 @@
   <input for="address">address:</lable>
   <input type="text" id="fullName" name="fullName" required><br><br>
 
+  <button type="submit">Submit</button>
+</form>
+
+
   </body>
   </html>  
